--- a/admob/network/index.html
+++ b/admob/network/index.html
@@ -1421,7 +1421,7 @@
 <tr>
 <td>UnityAds</td>
 <td align="center">3.3.0</td>
-<td align="center">-</td>
+<td align="center">o</td>
 <td align="center">o</td>
 <td align="center">o</td>
 <td align="center">o</td>
