idの表記揺れ修正

--- a/aps/init/index.html
+++ b/aps/init/index.html
@@ -1424,14 +1424,14 @@ APSの広告を表示するためには、<code>AdMobの広告リクエスト時
 <div class="superfences-content"><div class="codehilite"><pre><span></span><span class="cp">#import &lt;DTBiOSSDK/DTBiOSSDK.h&gt;</span>
 <span class="p">...</span>
 
-<span class="p">[[</span><span class="n">DTBAds</span> <span class="n">sharedInstance</span><span class="p">]</span> <span class="nl">setAppKey</span><span class="p">:</span> <span class="s">@&quot;your_app_id&quot;</span><span class="p">];</span>
+<span class="p">[[</span><span class="n">DTBAds</span> <span class="n">sharedInstance</span><span class="p">]</span> <span class="nl">setAppKey</span><span class="p">:</span> <span class="s">@&quot;YOUR_APP_ID&quot;</span><span class="p">];</span>
 </pre></div></div>
 <input name="__tabs_1" type="radio" id="__tab_1_1" />
 <label for="__tab_1_1">swift</label>
 <div class="superfences-content"><div class="codehilite"><pre><span></span><span class="kd">import</span> <span class="nc">DTBiOSSDK</span>
 <span class="p">...</span>
 
-<span class="n">DTBAds</span><span class="p">.</span><span class="n">sharedInstance</span><span class="p">().</span><span class="n">setAppKey</span><span class="p">(</span><span class="s">&quot;your_app_id&quot;</span><span class="p">)</span>
+<span class="n">DTBAds</span><span class="p">.</span><span class="n">sharedInstance</span><span class="p">().</span><span class="n">setAppKey</span><span class="p">(</span><span class="s">&quot;YOUR_APP_ID&quot;</span><span class="p">)</span>
 </pre></div></div>
 </div>
 <p>テスト時には下記のものも追加します。
