--- a/aps/banner/index.html
+++ b/aps/banner/index.html
@@ -1419,7 +1419,7 @@
 <input name="__tabs_2" type="radio" id="__tab_2_0" checked="checked" />
 <label for="__tab_2_0">Objective-C</label>
 <div class="superfences-content"><div class="codehilite"><pre><span></span><span class="n">DTBAdLoader</span> <span class="o">*</span><span class="n">adLoader</span> <span class="o">=</span> <span class="p">[</span><span class="n">DTBAdLoader</span> <span class="n">new</span><span class="p">];</span>
-<span class="p">[</span><span class="n">adLoader</span> <span class="n">setSizes</span><span class="err">：</span><span class="n">size</span><span class="err">、</span><span class="nb">nil</span><span class="p">];</span>
+<span class="p">[</span><span class="n">adLoader</span> <span class="nl">setSizes</span><span class="p">:</span><span class="n">size</span><span class="p">,</span> <span class="nb">nil</span><span class="p">];</span>
 </pre></div></div>
 <input name="__tabs_2" type="radio" id="__tab_2_1" />
 <label for="__tab_2_1">swift</label>
@@ -1432,7 +1432,7 @@
 <div class="superfences-tabs">
 <input name="__tabs_3" type="radio" id="__tab_3_0" checked="checked" />
 <label for="__tab_3_0">Objective-C</label>
-<div class="superfences-content"><div class="codehilite"><pre><span></span><span class="p">[</span><span class="n">adLoader</span> <span class="n">loadAd</span><span class="err">：</span><span class="nb">self</span><span class="p">];</span>
+<div class="superfences-content"><div class="codehilite"><pre><span></span><span class="p">[</span><span class="n">adLoader</span> <span class="nl">loadAd</span><span class="p">:</span><span class="nb">self</span><span class="p">];</span>
 </pre></div></div>
 <input name="__tabs_3" type="radio" id="__tab_3_1" />
 <label for="__tab_3_1">swift</label>
