--- a/adstir/init/cocoapods/index.html
+++ b/adstir/init/cocoapods/index.html
@@ -1416,6 +1416,10 @@ platformの行は、プロジェクトに応じて適宜設定してください
 <td>adstir SDK / AppLovin SDKとアダプター</td>
 </tr>
 <tr>
+<td>AdStir-Ads-SDK/IMobile</td>
+<td>adstir SDK / IMobile SDKとアダプター</td>
+</tr>
+<tr>
 <td>AdStir-Ads-SDK/Maio</td>
 <td>adstir SDK / Maio SDKとアダプター</td>
 </tr>
